--- a/inst/fulltext/reading_reuters.html
+++ b/inst/fulltext/reading_reuters.html
@@ -3,17 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Corpus: REUTERS</title>
-<script type="text/javascript">
-window.onload = function() {
-  var imgs = document.getElementsByTagName('img'), i, img;
-  for (i = 0; i < imgs.length; i++) {
-    img = imgs[i];
-    // center an image if it is the only element of its parent
-    if (img.parentElement.childElementCount === 1)
-      img.parentElement.style.textAlign = 'center';
-  }
-};
-</script><style type="text/css">
+<style type="text/css">
 body, td {
    font-family: sans-serif;
    background-color: white;
