working tests for as.markdown() #235

--- a/inst/fulltext/merkel_as_html.html
+++ b/inst/fulltext/merkel_as_html.html
@@ -194,7 +194,8 @@ hr {
 
 <blockquote>
 <p><span id="10527" token="Anhaltender" class="fulltext">Anhaltender</span> <span id="10528" token="Beifall" class="fulltext">Beifall</span> <span id="10529" token="bei" class="fulltext">bei</span> <span id="10530" token="der" class="fulltext">der</span> <span id="10531" token="CDU" class="fulltext">CDU</span> <span id="10532" token="/" class="fulltext">/</span> <span id="10533" token="CSU" class="fulltext">CSU</span> <span id="10534" token="und" class="fulltext">und</span> <span id="10535" token="der" class="fulltext">der</span> <span id="10536" token="FDP" class="fulltext">FDP</span></p>
-
+</blockquote>
+<blockquote>
 <p><span id="10537" token="Beifall" class="fulltext">Beifall</span> <span id="10538" token="bei" class="fulltext">bei</span> <span id="10539" token="Abgeordneten" class="fulltext">Abgeordneten</span> <span id="10540" token="der" class="fulltext">der</span> <span id="10541" token="SPD" class="fulltext">SPD</span><span id="10542" token="," class="fulltext">,</span> <span id="10543" token="der" class="fulltext">der</span> <span id="10544" token="LINKEN" class="fulltext">LINKEN</span> <span id="10545" token="und" class="fulltext">und</span> <span id="10546" token="des" class="fulltext">des</span> <span id="10547" token="BÜNDNISSES" class="fulltext">BÜNDNISSES</span> <span id="10548" token="90" class="fulltext">90</span> <span id="10549" token="/" class="fulltext">/</span> <span id="10550" token="DIE" class="fulltext">DIE</span> <span id="10551" token="GRÜNEN" class="fulltext">GRÜNEN</span></p>
 </blockquote>
 
