--- a/inst/fulltext/reuters_as_html.html
+++ b/inst/fulltext/reuters_as_html.html
@@ -139,14 +139,14 @@ hr {
    }
 }
  /* Tooltip container */
-.tooltip {
+.tooltipping {
     position: relative;
     display: inline-block;
     border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
 
 /* Tooltip text */
-.tooltip .tooltiptext {
+.tooltipping .tooltippingtext {
     visibility: hidden;
     width: 120px;
     background-color: #555;
@@ -168,7 +168,7 @@ hr {
 }
 
 /* Tooltip arrow */
-.tooltip .tooltiptext::after {
+.tooltipping .tooltippingtext::after {
     content: "";
     position: absolute;
     top: 100%;
@@ -180,7 +180,7 @@ hr {
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
+.tooltipping:hover .tooltippingtext {
     visibility: visible;
     opacity: 1;
 }
